--- a/css/main.css
+++ b/css/main.css
@@ -443,7 +443,7 @@ a {
     font-size: 14px;
     color: #7D7D7D; }
 
-.ul {
+ul {
   list-style: none;
   padding: 0;
   margin: 0; }
@@ -539,7 +539,10 @@ a {
   -webkit-box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.11);
   box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.11);
   font-size: 15px;
-  overflow: hidden; }
+  overflow: hidden;
+  display: none; }
+  .categories-menu.open {
+    display: block; }
 
 .categories-menu-wrap {
   -webkit-transform: translateZ(0);
@@ -598,3 +601,302 @@ a {
   position: absolute;
   right: 17px;
   top: 10px; }
+
+img {
+  max-width: 100%;
+  height: auto; }
+
+@media (min-width: 1300px) {
+  .container {
+    max-width: 1240px; } }
+
+.section_title {
+  font-size: 30px;
+  line-height: 32px;
+  color: #000000;
+  font-weight: bold;
+  margin-bottom: 15px; }
+
+.single_product {
+  background: #FFFFFF;
+  border: 1px solid #F4F4F4;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-transition: opacity .2s ease-out, -webkit-box-shadow .3s ease-out, -webkit-transform .3s ease-out;
+  transition: opacity .2s ease-out, -webkit-box-shadow .3s ease-out, -webkit-transform .3s ease-out;
+  -o-transition: box-shadow .3s ease-out, transform .3s ease-out, opacity .2s ease-out;
+  transition: box-shadow .3s ease-out, transform .3s ease-out, opacity .2s ease-out;
+  transition: box-shadow .3s ease-out, transform .3s ease-out, opacity .2s ease-out, -webkit-box-shadow .3s ease-out, -webkit-transform .3s ease-out;
+  -webkit-transition-delay: .1s;
+  -o-transition-delay: .1s;
+  transition-delay: .1s; }
+  .single_product:hover {
+    -webkit-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.15); }
+    .single_product:hover .action_links {
+      opacity: 1;
+      visibility: visible; }
+    .single_product:hover .add_to_cart {
+      visibility: visible;
+      opacity: 1;
+      bottom: -48px;
+      -webkit-box-shadow: 0px 7px 7px 0px rgba(0, 0, 0, 0.15);
+      box-shadow: 0px 7px 7px 0px rgba(0, 0, 0, 0.15); }
+
+.product_thumb {
+  position: relative;
+  padding: 10px; }
+
+.product_img_link img {
+  width: 100%;
+  margin: 0 auto;
+  height: 200px;
+  -o-object-fit: contain;
+  object-fit: contain;
+  -o-object-position: center center;
+  object-position: center center; }
+
+.label_product span {
+  position: absolute;
+  padding: 0px 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  color: #FFFFFF;
+  font-size: 12px;
+  left: 10px;
+  top: 10px; }
+
+.label_product .label_sale {
+  background: #F85454; }
+
+.label_product .label_new {
+  background: #FFC700; }
+
+.label_product ul li {
+  display: inline-block; }
+  .label_product ul li a {
+    font-size: 21px;
+    border: 2px solid #ebebeb;
+    height: 43px;
+    width: 43px;
+    line-height: 39px;
+    text-align: center;
+    background: #ffffff;
+    display: block; }
+
+.action_links {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 10px;
+  z-index: 9;
+  text-align: center; }
+
+.product_content {
+  position: relative; }
+
+.product_content_inner {
+  padding: 15px 10px 15px 10px; }
+
+.product_name {
+  margin-bottom: 7px;
+  line-height: 16px;
+  height: 32px; }
+  .product_name a {
+    color: #000000;
+    font-size: 12px;
+    display: block;
+    display: -webkit-box;
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical; }
+
+.price_box .old_price {
+  text-decoration: line-through;
+  font-size: 12px;
+  color: #797979;
+  margin-left: 5px; }
+
+.price_box .current_price {
+  color: #000000;
+  font-size: 14px;
+  font-weight: bold; }
+
+.add_to_cart {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  visibility: hidden;
+  z-index: 9;
+  opacity: 0;
+  -webkit-transition: .3s ease;
+  -o-transition: .3s ease;
+  transition: .3s ease;
+  background: #fff;
+  padding: 10px;
+  -webkit-border-radius: 0 0 5px 5px;
+  border-radius: 0 0 5px 5px; }
+  .add_to_cart a {
+    height: 45px;
+    line-height: 41px;
+    display: inline-block;
+    font-size: 15px;
+    font-weight: 500;
+    text-transform: uppercase;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    width: 100%;
+    background-color: #4D89FF;
+    color: #fff; }
+    .add_to_cart a:hover {
+      background: #c40316;
+      color: #ffffff; }
+
+.small_product .single_product {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 10px;
+  background-color: transparent;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  border: none;
+  margin: 10px 0; }
+
+.small_product .product_thumb {
+  width: 25%;
+  padding: 0; }
+
+.small_product .product_content {
+  width: 75%;
+  padding-left: 10px; }
+
+.small_product .product_img_link img {
+  height: 60px; }
+
+.small_product .product_content_inner {
+  padding: 0; }
+
+.small_product .label_product span {
+  left: 0;
+  top: 0; }
+
+.block_title {
+  font-size: 20px;
+  line-height: 22px;
+  color: #000000;
+  font-weight: bold;
+  margin-bottom: 10px; }
+
+.block-w {
+  background: #FFFFFF;
+  border: 1px solid #F4F4F4;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  padding: 10px; }
+
+.btn {
+  display: inline-block;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: .429rem 1rem;
+  font-size: 1rem;
+  line-height: 1.571429;
+  -webkit-border-radius: .215rem;
+  border-radius: .215rem;
+  -webkit-transition: background-color .15s ease-in-out, border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
+  transition: background-color .15s ease-in-out, border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;
+  -o-transition: background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+  transition: background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+  transition: background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out, -webkit-box-shadow .15s ease-in-out; }
+
+.btn-block {
+  display: block;
+  width: 100%; }
+
+.btn-outline-primary,
+.btn-outline.btn-primary {
+  color: #4D89FF;
+  background-color: transparent;
+  border-color: #4D89FF; }
+  .btn-outline-primary:hover,
+  .btn-outline.btn-primary:hover {
+    background-color: #4D89FF;
+    border-color: #4D89FF;
+    color: #fff; }
+
+.btn-sm {
+  padding: 5px;
+  font-size: 13px;
+  line-height: 1; }
+
+.features {
+  background: #212953; }
+
+.features-items {
+  padding: 30px 0; }
+
+.features-item {
+  text-align: center; }
+  .features-item .features-content {
+    color: #FFFFFF;
+    font-size: 14px;
+    font-weight: bold; }
+  .features-item .features-icon {
+    margin-bottom: 10px; }
+
+.footer {
+  padding: 40px 0; }
+
+.widget {
+  color: #3A3A3A; }
+  .widget p {
+    color: #858585;
+    font-size: 11px;
+    line-height: 13px; }
+
+.f_logo {
+  color: #3A3A3A;
+  font-size: 24px;
+  line-height: 28px;
+  font-family: "arial-bold";
+  display: block; }
+
+.widget_title {
+  font-weight: bold;
+  font-size: 14px;
+  margin-bottom: 10px; }
+
+.footer_menu ul li {
+  padding: 2px 0; }
+  .footer_menu ul li a {
+    color: #3A3A3A;
+    font-size: 14px; }
+
+p.copyright {
+  text-align: right;
+  font-size: 14px;
+  line-height: 24px;
+  color: #3A3A3A; }
