--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,7 @@ $secondary: #47546a;
 $darkgray: #C4CBDB;
 $gray: #7D7D7D;
 $blue: #4D89FF;
+$lightblue: #4D89FF;
 $red: #F85454;
 
 @each $space in $spaceamounts {
@@ -90,7 +91,7 @@ a {
     }
 }
 
-.ul {
+ul {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -176,6 +177,11 @@ a {
     box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.11);
     font-size: 15px;
     overflow: hidden;
+    display: none;
+
+    &.open {
+        display: block;
+    }
 }
 
 .categories-menu-wrap {
@@ -217,7 +223,8 @@ a {
         transition: none;
         position: relative;
 
-        &:hover,&.active {
+        &:hover,
+        &.active {
             background-color: $blue;
             color: #fff;
         }
@@ -237,4 +244,346 @@ a {
         right: 17px;
         top: 10px;
     }
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+@media (min-width: 1300px) {
+    .container {
+        max-width: 1240px;
+    }
+}
+
+.section_title {
+    font-size: 30px;
+    line-height: 32px;
+    color: #000000;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+.single_product {
+    background: #FFFFFF;
+    border: 1px solid #F4F4F4;
+    border-radius: 5px;
+    transition: box-shadow .3s ease-out, transform .3s ease-out, opacity .2s ease-out;
+    transition-delay: .1s;
+
+    &:hover {
+        box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.15);
+
+        .action_links {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .add_to_cart {
+            visibility: visible;
+            opacity: 1;
+            bottom: -48px;
+            box-shadow: 0px 7px 7px 0px rgba(0, 0, 0, 0.15);
+        }
+    }
+}
+
+.product_thumb {
+    position: relative;
+    padding: 10px;
+}
+
+.product_img_link {
+    img {
+        width: 100%;
+        margin: 0 auto;
+        height: 200px;
+        object-fit: contain;
+        object-position: center center;
+    }
+}
+
+.label_product {
+    span {
+        position: absolute;
+        padding: 0px 5px;
+        border-radius: 5px;
+        color: #FFFFFF;
+        font-size: 12px;
+        left: 10px;
+        top: 10px;
+    }
+
+    .label_sale {
+        background: #F85454;
+    }
+
+    .label_new {
+        background: #FFC700;
+    }
+
+    ul {
+
+        li {
+            display: inline-block;
+
+            a {
+                font-size: 21px;
+                border: 2px solid #ebebeb;
+                height: 43px;
+                width: 43px;
+                line-height: 39px;
+                text-align: center;
+                background: #ffffff;
+                display: block;
+            }
+        }
+    }
+}
+
+.action_links {
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 10px;
+    z-index: 9;
+    text-align: center;
+}
+
+.product_content {
+    position: relative;
+}
+
+.product_content_inner {
+    padding: 15px 10px 15px 10px;
+}
+
+.product_name {
+    margin-bottom: 7px;
+    line-height: 16px;
+    height: 32px;
+
+    a {
+        color: #000000;
+        font-size: 12px;
+        display: block;
+        display: -webkit-box;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+    }
+}
+
+.price_box {
+    .old_price {
+        text-decoration: line-through;
+        font-size: 12px;
+        color: #797979;
+        margin-left: 5px;
+    }
+
+    .current_price {
+        color: #000000;
+        font-size: 14px;
+        font-weight: bold;
+    }
+}
+
+
+
+.add_to_cart {
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    visibility: hidden;
+    z-index: 9;
+    opacity: 0;
+    transition: .3s ease;
+    background: #fff;
+    padding: 10px;
+    border-radius: 0 0 5px 5px;
+
+    a {
+        height: 45px;
+        line-height: 41px;
+        display: inline-block;
+        font-size: 15px;
+        font-weight: 500;
+        text-transform: uppercase;
+        border-radius: 4px;
+        width: 100%;
+        background-color: $blue;
+        color: #fff;
+
+        &:hover {
+            background: #c40316;
+            color: #ffffff;
+        }
+    }
+}
+
+.small_product {
+    .single_product {
+        display: flex;
+        align-items: center;
+        padding: 10px;
+        background-color: transparent;
+        box-shadow: none;
+        border-radius: 0;
+        border: none;
+        margin: 10px 0;
+    }
+
+    .product_thumb {
+        width: 25%;
+        padding: 0;
+    }
+
+    .product_content {
+        width: 75%;
+        padding-left: 10px;
+    }
+
+    .product_img_link img {
+        height: 60px;
+    }
+
+    .product_content_inner {
+        padding: 0;
+    }
+
+    .label_product span {
+        left: 0;
+        top: 0;
+    }
+}
+
+.block_title {
+    font-size: 20px;
+    line-height: 22px;
+    color: #000000;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.block-w {
+    background: #FFFFFF;
+    border: 1px solid #F4F4F4;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.btn {
+    display: inline-block;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: .429rem 1rem;
+    font-size: 1rem;
+    line-height: 1.571429;
+    border-radius: .215rem;
+    transition: background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.btn-block {
+    display: block;
+    width: 100%;
+}
+
+.btn-outline-primary,
+.btn-outline.btn-primary {
+    color: $lightblue;
+    background-color: transparent;
+    border-color: $lightblue;
+
+    &:hover {
+        background-color: $lightblue;
+        border-color: $lightblue;
+        color: #fff;
+    }
+}
+
+.btn-sm {
+    padding: 5px;
+    font-size: 13px;
+    line-height: 1;
+}
+
+.features {
+    background: #212953;
+}
+
+.features-items {
+    padding: 30px 0;
+}
+
+.features-item {
+    text-align: center;
+
+    .features-content {
+        color: #FFFFFF;
+        font-size: 14px;
+        font-weight: bold;
+    }
+
+    .features-icon {
+        margin-bottom: 10px;
+    }
+
+}
+
+.footer {
+    padding: 40px 0;
+}
+
+.widget {
+    color: #3A3A3A;
+
+    p {
+        color: #858585;
+        font-size: 11px;
+        line-height: 13px;
+    }
+}
+
+.f_logo {
+    color: #3A3A3A;
+    font-size: 24px;
+    line-height: 28px;
+    font-family: "arial-bold";
+    display: block;
+}
+
+.widget_title {
+    font-weight: bold;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.footer_menu {
+    ul {
+        li {
+            padding: 2px 0;
+
+            a {
+                color: #3A3A3A;
+                font-size: 14px;
+            }
+        }
+    }
+}
+p.copyright{
+    text-align: right;
+    font-size: 14px;
+    line-height: 24px;
+    color: #3A3A3A;
 }
