--- a/css/responsive.css
+++ b/css/responsive.css
@@ -22,6 +22,10 @@
   .header-container {
     font-size: 13px; } }
 
+@media only screen and (min-width: 992px) {
+  .navbar-toggle {
+    display: none; } }
+
 @media only screen and (max-width: 992px) {
   .top-bar {
     margin: 0 auto; }
