--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -41,7 +41,11 @@
         font-size: 13px;
     }
 }
-
+@media only screen and (min-width: 992px) {
+    .navbar-toggle{
+        display:none;
+    }
+}
 @media only screen and (max-width: 992px) {
     .top-bar {
         margin: 0 auto;
