--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -42,11 +42,15 @@
     }
 }
 @media only screen and (min-width: 992px) {
-    .navbar-toggle{
+    .navbar-toggle,.menu-down li.search_btn {
         display:none;
     }
+
 }
 @media only screen and (max-width: 992px) {
+    .logo {
+    font-size: 15px;
+}
     .top-bar {
         margin: 0 auto;
 
@@ -78,7 +82,10 @@
     }
 
     .menu-down li {
-        margin: 0 10px !important;
+        margin: 0 8px !important;
+        &.search_btn{
+            display:block;
+        }
     }
 
     .product_img_link img {
