--- a/css/main.css
+++ b/css/main.css
@@ -408,7 +408,8 @@ a {
 .header {
   -webkit-box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
-  background-color: #fff; }
+  background-color: #fff;
+  position: relative; }
 
 .header-container {
   max-width: 1300px;
@@ -945,7 +946,7 @@ p.copyright {
 .top-nav-close {
   position: absolute;
   top: 0;
-  right: -40px;
+  right: -38px;
   display: none;
   width: 40px;
   height: 37px;
@@ -1079,3 +1080,60 @@ p.copyright {
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%); }
+
+.search-block {
+  position: absolute;
+  z-index: 2;
+  top: 100%;
+  left: -1000px;
+  right: auto;
+  display: block;
+  margin-top: 1px;
+  background: #fff; }
+  .search-block.active {
+    left: 0;
+    right: 0; }
+  .search-block .search-form {
+    border-bottom: 1px solid #efefef; }
+  .search-block form {
+    position: relative; }
+  .search-block .form-control {
+    border: none;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    font-weight: 500;
+    width: 100%;
+    padding: 9px 15px;
+    box-shadow: none;
+    border-color: #4b6ecd; }
+  .search-block .search-close {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    padding: 6px 10px;
+    font-size: 13px;
+    line-height: 16px; }
+  .search-block .search-result {
+    display: block; }
+  .search-block .search-result-group {
+    border-top: 1px solid #eee;
+    padding: 5px 0; }
+  .search-block .group-title {
+    display: block;
+    color: #9b9b9b;
+    font-size: 11px;
+    padding: 0 10px; }
+  .search-block .group-items a {
+    display: block;
+    padding: 5px 15px;
+    color: inherit;
+    font-size: 13px;
+    line-height: 1; }
+  .search-block .group-items mark {
+    display: inline;
+    padding: 0;
+    background: transparent;
+    color: #9b9b9b; }
