--- a/css/main.css
+++ b/css/main.css
@@ -1137,3 +1137,366 @@ p.copyright {
     padding: 0;
     background: transparent;
     color: #9b9b9b; }
+
+.login_page {
+  background: url(../img/login.jpg) no-repeat;
+  min-height: 100vh;
+  -webkit-background-size: cover;
+  background-size: cover; }
+
+.nav-tabs-horizontal {
+  background: #FFFFFF;
+  border: 1px solid #D9D9D9;
+  -webkit-border-radius: 5px;
+  border-radius: 5px; }
+
+.nav-tabs-line {
+  position: relative;
+  border-bottom: 1px solid #E1E1E1; }
+
+.nav {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none; }
+
+.nav-link, .nav-link:hover {
+  display: block;
+  padding: .5rem 1rem;
+  text-decoration: none; }
+
+.nav-tabs-line .nav-item {
+  margin-bottom: -1px;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  font-size: 16px; }
+
+.nav-tabs-line .nav-item .nav-link {
+  padding: 15px 0;
+  border-color: transparent;
+  border-bottom: 1px solid transparent;
+  color: #595959;
+  overflow: hidden;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  text-align: center; }
+
+.nav-tabs-line .nav-item.active .nav-link {
+  color: #4D89FF;
+  background-color: transparent;
+  border-bottom: 1px solid #4D89FF;
+  font-weight: bold; }
+
+.tab-content {
+  padding: 30px; }
+
+.tab-content > .tab-pane {
+  display: none; }
+
+.tab-content > .tab-pane.active {
+  display: block; }
+
+.ant-row {
+  position: relative;
+  height: auto;
+  margin-right: 0;
+  margin-left: 0;
+  zoom: 1;
+  display: block;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+.ant-form-item {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0;
+  color: rgba(0, 0, 0, 0.65);
+  font-size: 14px;
+  font-variant: tabular-nums;
+  line-height: 1.5;
+  list-style: none;
+  -webkit-font-feature-settings: "tnum";
+  font-feature-settings: "tnum";
+  margin: 0 0 10px;
+  vertical-align: top; }
+
+.ant-row:after, .ant-row:before {
+  display: table;
+  content: ""; }
+
+.ant-col {
+  position: relative;
+  min-height: 1px; }
+
+.ant-form-item-control {
+  position: relative;
+  line-height: 40px;
+  zoom: 1; }
+
+.ant-form-item-control:after, .ant-form-item-control:before {
+  display: table;
+  content: ""; }
+
+.ant-form-item-children {
+  position: relative; }
+
+.ant-input {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  font-variant: tabular-nums;
+  list-style: none;
+  -webkit-font-feature-settings: "tnum";
+  font-feature-settings: "tnum";
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 32px;
+  padding: 4px 11px;
+  color: rgba(0, 0, 0, 0.65);
+  font-size: 14px;
+  line-height: 1.5;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #d9d9d9;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s; }
+
+[role=button], a, area, button, input:not([type=range]), label, select, summary, textarea {
+  -ms-touch-action: manipulation;
+  touch-action: manipulation; }
+
+input[type=number], input[type=password], input[type=text], textarea {
+  -webkit-appearance: none; }
+
+.ant-input:focus, .search_input:focus {
+  outline: 0;
+  -webkit-box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2);
+  box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2); }
+
+.ant-input:focus, .ant-input:hover, .search_input:focus {
+  border-color: #40a9ff;
+  border-right-width: 1px !important; }
+
+::-webkit-input-placeholder {
+  color: #bfbfbf; }
+
+:-ms-input-placeholder {
+  color: #bfbfbf; }
+
+::-ms-input-placeholder {
+  color: #bfbfbf; }
+
+::placeholder {
+  color: #bfbfbf; }
+
+:-ms-input-placeholder {
+  color: #bfbfbf; }
+
+::-ms-input-placeholder {
+  color: #bfbfbf; }
+
+.ant-checkbox-wrapper {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: rgba(0, 0, 0, 0.65);
+  font-size: 14px;
+  font-variant: tabular-nums;
+  line-height: 1.5;
+  list-style: none;
+  -webkit-font-feature-settings: "tnum";
+  font-feature-settings: "tnum";
+  display: inline-block;
+  line-height: unset;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+
+.ant-checkbox {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: rgba(0, 0, 0, 0.65);
+  font-size: 14px;
+  font-variant: tabular-nums;
+  line-height: 1.5;
+  list-style: none;
+  -webkit-font-feature-settings: "tnum";
+  font-feature-settings: "tnum";
+  position: relative;
+  top: -.09em;
+  display: inline-block;
+  line-height: 1;
+  white-space: nowrap;
+  vertical-align: middle;
+  outline: none;
+  cursor: pointer; }
+
+.ant-checkbox-input {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  opacity: 0; }
+
+.ant-checkbox-inner {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 16px;
+  height: 16px;
+  background-color: #fff;
+  border: 1px solid #d9d9d9;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  border-collapse: separate;
+  -webkit-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s; }
+
+.ant-checkbox-inner:after {
+  position: absolute;
+  top: 50%;
+  left: 22%;
+  display: table;
+  width: 5.71428571px;
+  height: 9.14285714px;
+  border: 2px solid #fff;
+  border-top: 0;
+  border-left: 0;
+  -webkit-transform: rotate(45deg) scale(0) translate(-50%, -50%);
+  -ms-transform: rotate(45deg) scale(0) translate(-50%, -50%);
+  transform: rotate(45deg) scale(0) translate(-50%, -50%);
+  opacity: 0;
+  -webkit-transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6), opacity 0.1s;
+  -o-transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6), opacity 0.1s;
+  transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6), opacity 0.1s;
+  content: " "; }
+
+.ant-checkbox + span {
+  padding-right: 8px;
+  padding-left: 8px;
+  font-size: 12px;
+  line-height: 14px;
+  color: #595959; }
+
+.ant-checkbox-checked .ant-checkbox-inner:after {
+  position: absolute;
+  display: table;
+  border: 2px solid #fff;
+  border-top: 0;
+  border-left: 0;
+  -webkit-transform: rotate(45deg) scale(1) translate(-50%, -50%);
+  -ms-transform: rotate(45deg) scale(1) translate(-50%, -50%);
+  transform: rotate(45deg) scale(1) translate(-50%, -50%);
+  opacity: 1;
+  -webkit-transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+  -o-transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+  transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+  content: " "; }
+
+.ant-checkbox-checked:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #1890ff;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  visibility: hidden;
+  -webkit-animation: antCheckboxEffect .36s ease-in-out;
+  animation: antCheckboxEffect .36s ease-in-out;
+  -webkit-animation-fill-mode: backwards;
+  animation-fill-mode: backwards;
+  content: ""; }
+
+.ant-btn {
+  line-height: 1.499;
+  position: relative;
+  display: inline-block;
+  font-weight: 400;
+  white-space: nowrap;
+  text-align: center;
+  background-image: none;
+  -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.015);
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.015);
+  cursor: pointer;
+  -webkit-transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  height: 32px;
+  padding: 0 15px;
+  font-size: 14px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  color: rgba(0, 0, 0, 0.65);
+  background-color: #fff;
+  border: 1px solid #d9d9d9; }
+
+.ant-btn-primary {
+  color: #fff;
+  background-color: #1890ff;
+  border-color: #1890ff;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045); }
+
+.ant-btn, .ant-btn:active, .ant-btn:focus {
+  outline: 0; }
+
+.ant-btn:focus, .ant-btn:hover {
+  color: #40a9ff;
+  background-color: #fff;
+  border-color: #40a9ff; }
+
+.ant-btn-primary:focus, .ant-btn-primary:hover {
+  color: #fff;
+  background-color: #40a9ff;
+  border-color: #40a9ff; }
+
+.ant-btn-danger {
+  color: #fff;
+  background-color: #ff4d4f;
+  border-color: #ff4d4f;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045); }
+
+.ant-btn-danger.active, .ant-btn-danger:active {
+  color: #fff;
+  background-color: #d9363e;
+  border-color: #d9363e; }
+
+.ant-btn-danger:focus, .ant-btn-danger:hover {
+  color: #fff;
+  background-color: #ff7875;
+  border-color: #ff7875; }
