--- a/css/responsive.css
+++ b/css/responsive.css
@@ -103,4 +103,13 @@
   .nav-tabs-line .nav-item {
     font-size: 13px; }
   .tab-content {
-    padding: 15px; } }
+    padding: 15px; }
+  .title {
+    font-size: 18px;
+    line-height: 23px; }
+  .product_price .new {
+    font-size: 25px; }
+    .product_price .new .sum {
+      font-size: 18px; }
+  .product_price .old {
+    font-size: 18px; } }
