--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -179,4 +179,17 @@
 .tab-content {
     padding: 15px;
 }
+.title {
+    font-size: 18px;
+    line-height: 23px;
+}
+.product_price .new {
+    font-size: 25px;
+.sum {
+    font-size: 18px;
+}
+}
+.product_price .old {
+    font-size: 18px;
+}
 }
