--- a/css/main.css
+++ b/css/main.css
@@ -393,6 +393,8 @@ body {
   font-family: Arial, sans-serif;
   color: #000000;
   font-size: 14px;
+  line-height: 20px;
+  color: #000000;
   background: #F9F9F9; }
 
 a {
@@ -1166,7 +1168,8 @@ p.copyright {
   margin-bottom: 0;
   list-style: none; }
 
-.nav-link, .nav-link:hover {
+.nav-link,
+.nav-link:hover {
   display: block;
   padding: .5rem 1rem;
   text-decoration: none; }
@@ -1228,7 +1231,8 @@ p.copyright {
   margin: 0 0 10px;
   vertical-align: top; }
 
-.ant-row:after, .ant-row:before {
+.ant-row:after,
+.ant-row:before {
   display: table;
   content: ""; }
 
@@ -1241,7 +1245,8 @@ p.copyright {
   line-height: 40px;
   zoom: 1; }
 
-.ant-form-item-control:after, .ant-form-item-control:before {
+.ant-form-item-control:after,
+.ant-form-item-control:before {
   display: table;
   content: ""; }
 
@@ -1273,19 +1278,33 @@ p.copyright {
   -o-transition: all .3s;
   transition: all .3s; }
 
-[role=button], a, area, button, input:not([type=range]), label, select, summary, textarea {
+[role=button],
+a,
+area,
+button,
+input:not([type=range]),
+label,
+select,
+summary,
+textarea {
   -ms-touch-action: manipulation;
   touch-action: manipulation; }
 
-input[type=number], input[type=password], input[type=text], textarea {
+input[type=number],
+input[type=password],
+input[type=text],
+textarea {
   -webkit-appearance: none; }
 
-.ant-input:focus, .search_input:focus {
+.ant-input:focus,
+.search_input:focus {
   outline: 0;
   -webkit-box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2);
   box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2); }
 
-.ant-input:focus, .ant-input:hover, .search_input:focus {
+.ant-input:focus,
+.ant-input:hover,
+.search_input:focus {
   border-color: #40a9ff;
   border-right-width: 1px !important; }
 
@@ -1470,15 +1489,19 @@ input[type=number], input[type=password], input[type=text], textarea {
   -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045); }
 
-.ant-btn, .ant-btn:active, .ant-btn:focus {
+.ant-btn,
+.ant-btn:active,
+.ant-btn:focus {
   outline: 0; }
 
-.ant-btn:focus, .ant-btn:hover {
+.ant-btn:focus,
+.ant-btn:hover {
   color: #40a9ff;
   background-color: #fff;
   border-color: #40a9ff; }
 
-.ant-btn-primary:focus, .ant-btn-primary:hover {
+.ant-btn-primary:focus,
+.ant-btn-primary:hover {
   color: #fff;
   background-color: #40a9ff;
   border-color: #40a9ff; }
@@ -1491,12 +1514,272 @@ input[type=number], input[type=password], input[type=text], textarea {
   -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045); }
 
-.ant-btn-danger.active, .ant-btn-danger:active {
+.ant-btn-danger.active,
+.ant-btn-danger:active {
   color: #fff;
   background-color: #d9363e;
   border-color: #d9363e; }
 
-.ant-btn-danger:focus, .ant-btn-danger:hover {
+.ant-btn-danger:focus,
+.ant-btn-danger:hover {
   color: #fff;
   background-color: #ff7875;
   border-color: #ff7875; }
+
+.ant-breadcrumb {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: rgba(0, 0, 0, 0.65);
+  font-variant: tabular-nums;
+  line-height: 1.5;
+  list-style: none;
+  -webkit-font-feature-settings: "tnum";
+  font-feature-settings: "tnum";
+  color: rgba(0, 0, 0, 0.45);
+  font-size: 14px; }
+
+.ant-breadcrumb-separator {
+  margin: 0 8px;
+  color: rgba(0, 0, 0, 0.45); }
+
+.ant-breadcrumb a {
+  color: rgba(0, 0, 0, 0.45);
+  -webkit-transition: color .3s;
+  -o-transition: color .3s;
+  transition: color .3s; }
+
+.productimagewrap {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start; }
+
+.product_img_s {
+  width: 65px;
+  margin-right: 20px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column; }
+  .product_img_s a {
+    margin-bottom: 10px;
+    opacity: 0.5; }
+    .product_img_s a.active {
+      opacity: 1; }
+
+.product_img_l {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #fff; }
+
+.title {
+  font-size: 24px;
+  line-height: 28px;
+  color: #000000;
+  font-weight: normal;
+  margin: 20px 0 30px; }
+
+.product_price .new {
+  font-weight: 900;
+  font-size: 36px;
+  color: #000000;
+  display: block;
+  margin-bottom: 10px; }
+  .product_price .new .sum {
+    font-size: 24px;
+    font-weight: 400; }
+
+.product_price .old {
+  -webkit-text-decoration-line: line-through;
+  text-decoration-line: line-through;
+  font-size: 24px;
+  color: #F85454;
+  display: block;
+  font-weight: 400; }
+
+.product_param {
+  margin: 30px 0; }
+  .product_param li {
+    font-size: 14px;
+    line-height: 23px;
+    color: #7D7D7D; }
+
+.product_variant {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-bottom: 25px; }
+  .product_variant li {
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    cursor: pointer;
+    margin-right: 12px;
+    margin-bottom: 12px;
+    border: 2px solid #fff; }
+    .product_variant li.active {
+      border: 2px solid #000000; }
+  .product_variant a {
+    width: 58px;
+    height: 58px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-border-radius: 5px;
+    border-radius: 5px; }
+
+.details-action-icon {
+  height: 50px;
+  width: 50px;
+  border: 0;
+  background: #c9dafb;
+  -webkit-border-radius: 50px;
+  border-radius: 50px;
+  margin-right: 13px;
+  color: #fe4536;
+  font-size: 15px;
+  display: flex-inline;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.details-action-icon:hover {
+  background: #4D89FF;
+  color: #fff; }
+  .details-action-icon:hover svg {
+    fill: #fff; }
+    .details-action-icon:hover svg path {
+      fill: #fff; }
+
+.product-details-action {
+  margin-bottom: 30px; }
+
+.cart-plus-minus {
+  display: inline-block;
+  position: relative;
+  margin-right: 15px; }
+  .cart-plus-minus input {
+    height: 50px;
+    width: 160px;
+    border: 0;
+    text-align: center;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background: #c9dafb;
+    -webkit-border-radius: 30px;
+    border-radius: 30px;
+    font-weight: 500;
+    color: #747691;
+    font-size: 16px; }
+  .cart-plus-minus .qtybutton {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    font-size: 20px;
+    color: #c4bedd;
+    cursor: pointer;
+    line-height: 1;
+    width: 40px;
+    height: 40px;
+    background: #fff;
+    font-size: 16px;
+    text-align: center;
+    line-height: 40px;
+    font-weight: 500;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s; }
+  .cart-plus-minus .inc {
+    left: auto;
+    right: 5px; }
+
+.p-20 {
+  padding: 20px; }
+
+button {
+  outline: none; }
+  button:hover, button:focus {
+    outline: none; }
+
+.details-cart {
+  margin-top: 30px; }
+  .details-cart .ant-btn {
+    width: 280px;
+    padding: 20px 0;
+    font-size: 23px;
+    line-height: 1;
+    height: 70px;
+    background-image: url(../img/cart-w.png);
+    background-repeat: no-repeat;
+    background-position: 92% center; }
+
+.product-info-list li {
+  font-size: 15px;
+  line-height: 18px;
+  color: #000000;
+  margin-bottom: 15px; }
+
+.read_more {
+  text-decoration: underline;
+  color: #4D89FF; }
+
+hr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 0;
+  border-top: 1px solid #F4F4F4; }
+
+table.product_table {
+  width: 100%;
+  font-size: 13px;
+  line-height: normal;
+  table-layout: fixed;
+  margin-bottom: 20px; }
+  table.product_table td {
+    vertical-align: top;
+    padding: 15px 10px 8px;
+    border-bottom: 1px solid #eee;
+    overflow-wrap: break-word;
+    word-wrap: break-word; }
+    table.product_table td:first-child {
+      padding-left: 0;
+      padding-right: 0; }
+    table.product_table td:last-child {
+      text-align: right;
+      padding-right: 0; }
+
+.maxw-350 {
+  max-width: 450px !important; }
