--- a/css/main.scss
+++ b/css/main.scss
@@ -35,6 +35,8 @@ body {
     font-family: Arial, sans-serif;
     color: $primary;
     font-size: 14px;
+    line-height: 20px;
+    color: #000000;
     background: #F9F9F9;
 }
 
@@ -847,20 +849,24 @@ p.copyright {
         color: #9b9b9b;
     }
 }
-.login_page{
+
+.login_page {
     background: url(../img/login.jpg) no-repeat;
     min-height: 100vh;
     background-size: cover;
 }
-.nav-tabs-horizontal{
+
+.nav-tabs-horizontal {
     background: #FFFFFF;
-border: 1px solid #D9D9D9;
-border-radius: 5px;
+    border: 1px solid #D9D9D9;
+    border-radius: 5px;
 }
+
 .nav-tabs-line {
     position: relative;
     border-bottom: 1px solid #E1E1E1;
 }
+
 .nav {
     display: -ms-flexbox;
     display: flex;
@@ -868,13 +874,16 @@ border-radius: 5px;
     flex-wrap: wrap;
     padding-left: 0;
     margin-bottom: 0;
-    list-style: none;    
+    list-style: none;
 }
-.nav-link,.nav-link:hover {
+
+.nav-link,
+.nav-link:hover {
     display: block;
     padding: .5rem 1rem;
     text-decoration: none;
 }
+
 .nav-tabs-line .nav-item {
     margin-bottom: -1px;
     -webkit-box-flex: 1;
@@ -883,6 +892,7 @@ border-radius: 5px;
     flex-grow: 1;
     font-size: 16px;
 }
+
 .nav-tabs-line .nav-item .nav-link {
     padding: 15px 0;
     border-color: transparent;
@@ -893,21 +903,26 @@ border-radius: 5px;
     border-radius: 0;
     text-align: center;
 }
+
 .nav-tabs-line .nav-item.active .nav-link {
     color: $blue;
     background-color: transparent;
     border-bottom: 1px solid $blue;
     font-weight: bold;
 }
+
 .tab-content {
-        padding: 30px;
+    padding: 30px;
 }
+
 .tab-content>.tab-pane {
     display: none;
 }
+
 .tab-content>.tab-pane.active {
     display: block;
 }
+
 .ant-row {
     position: relative;
     height: auto;
@@ -917,10 +932,11 @@ border-radius: 5px;
     display: block;
     box-sizing: border-box;
 }
+
 .ant-form-item {
     box-sizing: border-box;
     padding: 0;
-    color: rgba(0,0,0,.65);
+    color: rgba(0, 0, 0, .65);
     font-size: 14px;
     font-variant: tabular-nums;
     line-height: 1.5;
@@ -929,26 +945,34 @@ border-radius: 5px;
     margin: 0 0 10px;
     vertical-align: top;
 }
-.ant-row:after, .ant-row:before {
+
+.ant-row:after,
+.ant-row:before {
     display: table;
     content: "";
 }
+
 .ant-col {
     position: relative;
     min-height: 1px;
 }
+
 .ant-form-item-control {
     position: relative;
     line-height: 40px;
     zoom: 1;
 }
-.ant-form-item-control:after, .ant-form-item-control:before {
+
+.ant-form-item-control:after,
+.ant-form-item-control:before {
     display: table;
     content: "";
 }
+
 .ant-form-item-children {
     position: relative;
 }
+
 .ant-input {
     box-sizing: border-box;
     margin: 0;
@@ -960,7 +984,7 @@ border-radius: 5px;
     width: 100%;
     height: 32px;
     padding: 4px 11px;
-    color: rgba(0,0,0,.65);
+    color: rgba(0, 0, 0, .65);
     font-size: 14px;
     line-height: 1.5;
     background-color: #fff;
@@ -969,36 +993,56 @@ border-radius: 5px;
     border-radius: 4px;
     transition: all .3s;
 }
-[role=button], a, area, button, input:not([type=range]), label, select, summary, textarea {
+
+[role=button],
+a,
+area,
+button,
+input:not([type=range]),
+label,
+select,
+summary,
+textarea {
     touch-action: manipulation;
 }
-input[type=number], input[type=password], input[type=text], textarea {
+
+input[type=number],
+input[type=password],
+input[type=text],
+textarea {
     -webkit-appearance: none;
 }
-.ant-input:focus,.search_input:focus {
+
+.ant-input:focus,
+.search_input:focus {
     outline: 0;
-    box-shadow: 0 0 0 2px rgba(24,144,255,.2);
+    box-shadow: 0 0 0 2px rgba(24, 144, 255, .2);
 }
-.ant-input:focus, .ant-input:hover,.search_input:focus {
+
+.ant-input:focus,
+.ant-input:hover,
+.search_input:focus {
     border-color: #40a9ff;
-    border-right-width: 1px!important;
-}
-::placeholder { 
-  color: #bfbfbf;
+    border-right-width: 1px !important;
 }
 
-:-ms-input-placeholder { 
-  color: #bfbfbf;
+::placeholder {
+    color: #bfbfbf;
 }
 
-::-ms-input-placeholder { 
-  color: #bfbfbf;
+:-ms-input-placeholder {
+    color: #bfbfbf;
 }
+
+::-ms-input-placeholder {
+    color: #bfbfbf;
+}
+
 .ant-checkbox-wrapper {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    color: rgba(0,0,0,.65);
+    color: rgba(0, 0, 0, .65);
     font-size: 14px;
     font-variant: tabular-nums;
     line-height: 1.5;
@@ -1007,13 +1051,14 @@ input[type=number], input[type=password], input[type=text], textarea {
     display: inline-block;
     line-height: unset;
     cursor: pointer;
-        display: flex;
+    display: flex;
 }
+
 .ant-checkbox {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    color: rgba(0,0,0,.65);
+    color: rgba(0, 0, 0, .65);
     font-size: 14px;
     font-variant: tabular-nums;
     line-height: 1.5;
@@ -1028,6 +1073,7 @@ input[type=number], input[type=password], input[type=text], textarea {
     outline: none;
     cursor: pointer;
 }
+
 .ant-checkbox-input {
     position: absolute;
     top: 0;
@@ -1040,6 +1086,7 @@ input[type=number], input[type=password], input[type=text], textarea {
     cursor: pointer;
     opacity: 0;
 }
+
 .ant-checkbox-inner {
     position: relative;
     top: 0;
@@ -1053,6 +1100,7 @@ input[type=number], input[type=password], input[type=text], textarea {
     border-collapse: separate;
     transition: all .3s;
 }
+
 .ant-checkbox-inner:after {
     position: absolute;
     top: 50%;
@@ -1063,29 +1111,32 @@ input[type=number], input[type=password], input[type=text], textarea {
     border: 2px solid #fff;
     border-top: 0;
     border-left: 0;
-    transform: rotate(45deg) scale(0) translate(-50%,-50%);
+    transform: rotate(45deg) scale(0) translate(-50%, -50%);
     opacity: 0;
-    transition: all .1s cubic-bezier(.71,-.46,.88,.6),opacity .1s;
+    transition: all .1s cubic-bezier(.71, -.46, .88, .6), opacity .1s;
     content: " ";
 }
+
 .ant-checkbox+span {
     padding-right: 8px;
     padding-left: 8px;
     font-size: 12px;
-line-height: 14px;
-color: #595959;
+    line-height: 14px;
+    color: #595959;
 }
+
 .ant-checkbox-checked .ant-checkbox-inner:after {
     position: absolute;
     display: table;
     border: 2px solid #fff;
     border-top: 0;
     border-left: 0;
-    transform: rotate(45deg) scale(1) translate(-50%,-50%);
+    transform: rotate(45deg) scale(1) translate(-50%, -50%);
     opacity: 1;
-    transition: all .2s cubic-bezier(.12,.4,.29,1.46) .1s;
+    transition: all .2s cubic-bezier(.12, .4, .29, 1.46) .1s;
     content: " ";
 }
+
 .ant-checkbox-checked:after {
     position: absolute;
     top: 0;
@@ -1101,6 +1152,7 @@ color: #595959;
     animation-fill-mode: backwards;
     content: "";
 }
+
 .ant-btn {
     line-height: 1.499;
     position: relative;
@@ -1109,9 +1161,9 @@ color: #595959;
     white-space: nowrap;
     text-align: center;
     background-image: none;
-    box-shadow: 0 2px 0 rgba(0,0,0,.015);
+    box-shadow: 0 2px 0 rgba(0, 0, 0, .015);
     cursor: pointer;
-    transition: all .3s cubic-bezier(.645,.045,.355,1);
+    transition: all .3s cubic-bezier(.645, .045, .355, 1);
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -1121,44 +1173,328 @@ color: #595959;
     padding: 0 15px;
     font-size: 14px;
     border-radius: 4px;
-    color: rgba(0,0,0,.65);
+    color: rgba(0, 0, 0, .65);
     background-color: #fff;
     border: 1px solid #d9d9d9;
 }
+
 .ant-btn-primary {
     color: #fff;
     background-color: #1890ff;
     border-color: #1890ff;
-    text-shadow: 0 -1px 0 rgba(0,0,0,.12);
-    box-shadow: 0 2px 0 rgba(0,0,0,.045);
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, .12);
+    box-shadow: 0 2px 0 rgba(0, 0, 0, .045);
 }
-.ant-btn, .ant-btn:active, .ant-btn:focus {
+
+.ant-btn,
+.ant-btn:active,
+.ant-btn:focus {
     outline: 0;
 }
-.ant-btn:focus, .ant-btn:hover {
+
+.ant-btn:focus,
+.ant-btn:hover {
     color: #40a9ff;
     background-color: #fff;
     border-color: #40a9ff;
 }
-.ant-btn-primary:focus, .ant-btn-primary:hover {
+
+.ant-btn-primary:focus,
+.ant-btn-primary:hover {
     color: #fff;
     background-color: #40a9ff;
     border-color: #40a9ff;
 }
+
 .ant-btn-danger {
     color: #fff;
     background-color: #ff4d4f;
     border-color: #ff4d4f;
-    text-shadow: 0 -1px 0 rgba(0,0,0,.12);
-    box-shadow: 0 2px 0 rgba(0,0,0,.045);
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, .12);
+    box-shadow: 0 2px 0 rgba(0, 0, 0, .045);
 }
-.ant-btn-danger.active, .ant-btn-danger:active {
+
+.ant-btn-danger.active,
+.ant-btn-danger:active {
     color: #fff;
     background-color: #d9363e;
     border-color: #d9363e;
 }
-.ant-btn-danger:focus, .ant-btn-danger:hover {
+
+.ant-btn-danger:focus,
+.ant-btn-danger:hover {
     color: #fff;
     background-color: #ff7875;
     border-color: #ff7875;
+}
+
+.ant-breadcrumb {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: rgba(0, 0, 0, .65);
+    font-variant: tabular-nums;
+    line-height: 1.5;
+    list-style: none;
+    font-feature-settings: "tnum";
+    color: rgba(0, 0, 0, .45);
+    font-size: 14px;
+}
+
+.ant-breadcrumb-separator {
+    margin: 0 8px;
+    color: rgba(0, 0, 0, .45);
+}
+
+.ant-breadcrumb a {
+    color: rgba(0, 0, 0, .45);
+    transition: color .3s;
+}
+
+.productimagewrap {
+    display: flex;
+    align-items: flex-start;
+}
+
+.product_img_s {
+    width: 65px;
+    margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+
+    a {
+        margin-bottom: 10px;
+        opacity: 0.5;
+
+        &.active {
+            opacity: 1;
+        }
+    }
+}
+
+.product_img_l {
+    display: flex;
+    background-color: #fff;
+}
+
+.title {
+    font-size: 24px;
+    line-height: 28px;
+    color: #000000;
+    font-weight: normal;
+    margin: 20px 0 30px;
+}
+
+.product_price {
+    .new {
+        font-weight: 900;
+        font-size: 36px;
+        color: #000000;
+        display: block;
+        margin-bottom: 10px;
+
+        .sum {
+            font-size: 24px;
+            font-weight: 400;
+        }
+    }
+
+
+
+    .old {
+        text-decoration-line: line-through;
+        font-size: 24px;
+        color: #F85454;
+        display: block;
+        font-weight: 400;
+    }
+}
+
+.product_param {
+    margin: 30px 0;
+
+    li {
+        font-size: 14px;
+        line-height: 23px;
+        color: #7D7D7D;
+    }
+}
+
+.product_variant {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 25px;
+
+    li {
+        border-radius: 3px;
+        cursor: pointer;
+        margin-right: 12px;
+        margin-bottom: 12px;
+        border: 2px solid #fff;
+
+        &.active {
+            border: 2px solid #000000;
+        }
+    }
+
+    a {
+        width: 58px;
+        height: 58px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+    }
+}
+
+.details-action-icon {
+    height: 50px;
+    width: 50px;
+    border: 0;
+    background: #c9dafb;
+    border-radius: 50px;
+    margin-right: 13px;
+    color: #fe4536;
+    font-size: 15px;
+    display: flex-inline;
+    justify-content: center;
+    align-items: center;
+}
+
+.details-action-icon:hover {
+    background: $blue;
+    color: #fff;
+
+    svg {
+        fill: #fff;
+
+        path {
+            fill: #fff;
+        }
+    }
+}
+
+.product-details-action {
+    margin-bottom: 30px;
+}
+
+.cart-plus-minus {
+    display: inline-block;
+    position: relative;
+    margin-right: 15px;
+
+    input {
+        height: 50px;
+        width: 160px;
+        border: 0;
+        text-align: center;
+        -moz-appearance: none;
+        appearance: none;
+        background: #c9dafb;
+        border-radius: 30px;
+        font-weight: 500;
+        color: #747691;
+        font-size: 16px;
+    }
+
+    .qtybutton {
+        position: absolute;
+        top: 5px;
+        left: 5px;
+        font-size: 20px;
+        color: #c4bedd;
+        cursor: pointer;
+        line-height: 1;
+        width: 40px;
+        height: 40px;
+        background: #fff;
+        font-size: 16px;
+        text-align: center;
+        line-height: 40px;
+        font-weight: 500;
+        border-radius: 50%;
+        transition: .3s;
+    }
+
+    .inc {
+        left: auto;
+        right: 5px;
+    }
+}
+
+.p-20 {
+    padding: 20px;
+}
+
+button {
+    outline: none;
+
+    &:hover,
+    &:focus {
+        outline: none;
+    }
+}
+
+.details-cart {
+    margin-top: 30px;
+
+    .ant-btn {
+        width: 280px;
+        padding: 20px 0;
+        font-size: 23px;
+        line-height: 1;
+        height: 70px;
+        background-image: url(../img/cart-w.png);
+        background-repeat: no-repeat;
+        background-position: 92% center;
+    }
+}
+
+.product-info-list {
+    li {
+        font-size: 15px;
+        line-height: 18px;
+        color: #000000;
+        margin-bottom: 15px;
+    }
+}
+
+.read_more {
+    text-decoration: underline;
+    color: #4D89FF;
+}
+
+hr {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 0;
+    border-top: 1px solid #F4F4F4;
+}
+
+table.product_table {
+    width: 100%;
+    font-size: 13px;
+    line-height: normal;
+    table-layout: fixed;
+    margin-bottom: 20px;
+
+    td {
+        vertical-align: top;
+        padding: 15px 10px 8px;
+        border-bottom: 1px solid #eee;
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+
+        &:first-child {
+            padding-left: 0;
+            padding-right: 0;
+        }
+        &:last-child {
+            text-align: right;
+            padding-right: 0;
+        }
+    }
+}
+.maxw-350{
+    max-width: 450px!important;
 }
